--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../resources/assets/img/logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/img/logo.png" rel="icon">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../resources/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../resources/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../resources/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../resources/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../resources/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="../resources/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="../resources/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="vendor/aos/aos.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../resources/assets/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
 </head>
 
@@ -35,8 +35,8 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center" style ="background-color: #6F8FEA">
     <div class="container d-flex align-items-center"  >
-      <img src="../resources/assets/img/logo.png" style="width: 40px;" alt="">
-      <h1 class="logo me-auto" style="margin-left: 10px; margin-top: 0px; "  ><a href="index.jsp" style="color:#fff" >Eye Opener<span></span></a></h1>
+      <img src="img/logo.png" style="width: 40px;" alt="">
+      <h1 class="logo me-auto" style="margin-left: 10px; margin-top: 0px; "  ><a href="index.html" style="color:#fff" >Eye Opener<span></span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.jsp" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -95,14 +95,13 @@
 
         <div class="clients-slider swiper-container">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="../resources/assets/img/01.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="../resources/assets/img/02.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="../resources/assets/img/03.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="../resources/assets/img/04.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="../resources/assets/img/05.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="../resources/assets/img/06.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/07.jpeg" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="../resources/assets/img/08.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/01.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/02.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/03.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/04.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/05.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/06.jpeg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="img/08.jpeg" class="img-fluid" alt=""></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -176,7 +175,7 @@
           </div>
 
         </div>
-        <iframe src="../resources/chart_example.html" style="width: 900px; height: 600px; margin-left: 300px;"></iframe>
+        <iframe src="chart_example.html" style="width: 900px; height: 600px; margin-left: 300px;"></iframe>
 
 
       </div>
@@ -207,12 +206,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="../resources/assets/img/01.jpeg" class="img-fluid" alt="">
+              <img src="img/01.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>7 News</h4>
                 <p>Seven News (stylised 7NEWS) is the television news service of the Seven Network and, as of 2016, the highest-rating in Australia</p>
                 <div class="portfolio-links">
-                  <a href="../resources/assets/img/01.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="More Details"><i class="bx bx-plus"></i></a>
+                  <a href="img/01.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="More Details"><i class="bx bx-plus"></i></a>
                   <a href="https://7news.com.au" title="Link"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -221,11 +220,11 @@
             
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="../resources/assets/img/02.jpeg" class="img-fluid" alt="">
+              <img src="img/02.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ABC news </h4>
                 <div class="portfolio-links">
-                  <a href="../resources/assets/img/02.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABC News is a public news service in Australia produced by the News and Current Affairs division of the Australian Broadcasting Corporation."><i class="bx bx-plus"></i></a>
+                  <a href="img/02.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABC News is a public news service in Australia produced by the News and Current Affairs division of the Australian Broadcasting Corporation."><i class="bx bx-plus"></i></a>
                   <a href="https://www.abc.net.au/news/" title="Link"><i class="bx bx-link"></i></a>
                 </div>  
               </div>
@@ -234,12 +233,12 @@
             
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="../resources/assets/img/06.jpeg" class="img-fluid" alt="">
+              <img src="img/06.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>The Guardian</h4>
                 <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="../resources/assets/img/05.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Guardian is a British daily newspaper. It was founded in 1821 as The Manchester Guardian, and changed its name in 1959."><i class="bx bx-plus"></i></a>
+                  <a href="img/05.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Guardian is a British daily newspaper. It was founded in 1821 as The Manchester Guardian, and changed its name in 1959."><i class="bx bx-plus"></i></a>
                   <a href="https://www.theguardian.com/au" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -249,12 +248,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="../resources/assets/img/04.jpeg" class="img-fluid" alt="">
+              <img src="img/04.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Daily Mail</h4>
                 <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="../resources/assets/img/04.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Daily Mail is a British daily middle-market newspaper published in London in a tabloid format. Founded in 1896, it is the United Kingdom's highest-circulated daily newspaper."><i class="bx bx-plus"></i></a>
+                  <a href="img/04.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Daily Mail is a British daily middle-market newspaper published in London in a tabloid format. Founded in 1896, it is the United Kingdom's highest-circulated daily newspaper."><i class="bx bx-plus"></i></a>
                   <a href="https://www.dailymail.co.uk/auhome/index.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -263,12 +262,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="../resources/assets/img/05.jpeg" class="img-fluid" alt="">
+              <img src="img/05.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>The Sydney Morning Herald</h4>
                 <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="../resources/assets/img/05.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Sydney Morning Herald (SMH) is a daily compact newspaper published in Sydney, New South Wales, Australia, and owned by Nine."><i class="bx bx-plus"></i></a>
+                  <a href="img/05.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Sydney Morning Herald (SMH) is a daily compact newspaper published in Sydney, New South Wales, Australia, and owned by Nine."><i class="bx bx-plus"></i></a>
                   <a href="https://www.smh.com.au/"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -277,12 +276,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="../resources/assets/img/03.jpeg" class="img-fluid" alt="">
+              <img src="img/03.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>9 News</h4>
                 <p>WebSite</p>
                 <div class="portfolio-links">
-                  <a href="../resources/assets/img/03.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Nine News (stylised 9News) is the national news service of the Nine Network in Australia."><i class="bx bx-plus"></i></a>
+                  <a href="img/03.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Nine News (stylised 9News) is the national news service of the Nine Network in Australia."><i class="bx bx-plus"></i></a>
                   <a href="https://www.9news.com.au/" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -310,7 +309,7 @@
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="../resources/assets/img/team/team-1.png" class="img-fluid" alt="">
+                <img src="img/team/team-1.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Zimu Huang (MBIS)</h4>
@@ -322,7 +321,7 @@
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="../resources/assets/img/team/team-2.png" class="img-fluid" alt="">
+                <img src="img/team/team-2.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Chaitali Kulkarni (MBIS)</h4>
@@ -334,7 +333,7 @@
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="../resources/assets/img/team/team-3.png" class="img-fluid" alt="">
+                <img src="img/team/team-3.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Vidhu Shekhar Tripathi (MDS)</h4>
@@ -346,7 +345,7 @@
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="../resources/assets/img/team/team-4.png" class="img-fluid" alt="">
+                <img src="img/team/team-4.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Jiaqi Song (MIT) </h4>
@@ -358,7 +357,7 @@
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="../resources/assets/img/team/team-5.png" class="img-fluid" alt="">
+                <img src="img/team/team-5.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Haodong Chen (MIT)</h4>
@@ -406,16 +405,16 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../resources/assets/vendor/aos/aos.js"></script>
-  <script src="../resources/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../resources/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../resources/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../resources/assets/vendor/php-email-form/validate.js"></script>
-  <script src="../resources/assets/vendor/purecounter/purecounter.js"></script>
-  <script src="../resources/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="vendor/aos/aos.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
+  <script src="vendor/purecounter/purecounter.js"></script>
+  <script src="vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="../resources/assets/js/main.js"></script>
+  <script src="js/main.js"></script>
 
 <style>
 .copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
