--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#tabs">About</a></li>
-          <li><a class="nav-link scrollto" href="#Bubble">Bubble</a></li>
+          <li><a class="nav-link scrollto" href="./bubble.html">Bubble</a></li>
           <li><a class="nav-link scrollto" href="./news.html">Recommondation</a></li>
           <!-- <li><a class="nav-link scrollto " href="#explore">Explore</a></li> -->
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="./team.html">Team</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -236,95 +236,9 @@
       </div>
     </section><!-- End Tabs Section -->
 
-    <section id="Bubble" class="about">
-      <div class="container" data-aos="fade-up" align="center" >
-        
-        <h2>Balance Your News Diet</h2>
 
-        <iframe src="chart_example.html" style="width: 666px; height: 666px; margin-left: 300px; "></iframe>
 
-      </div>
-    </section><!-- End About Section -->
-
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Team</h2>
-          <p>
-          </p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-1 col-md-6 d-flex align-items-stretch"></div>
-
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="img/team/team-1.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Zimu Huang (MBIS)</h4>
-                <span>Project Management & Processing control</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="img/team/team-2.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Chaitali Kulkarni (MBIS)</h4>
-                <span>Product Management & Business analysis</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="img/team/team-3.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Vidhu Shekhar Tripathi (MDS)</h4>
-                <span>Data engineer & Data analysis</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="img/team/team-4.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Jiaqi Song (MIT) </h4>
-                <span>Chief Project architect & Developer</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="img/team/team-5.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Haodong Chen (MIT)</h4>
-                <span>Web Developer</span>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Team Section -->
-
-  </main><!-- End #main -->
+  
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
