--- a/news.html
+++ b/news.html
@@ -44,10 +44,10 @@
         <ul>
           <li><a class="nav-link scrollto " href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./index.html#tabs">About</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#Bubble">Bubble</a></li>
+          <li><a class="nav-link scrollto" href="./bubble.html">Bubble</a></li>
           <li><a class="nav-link scrollto" href="./news.html">Recommondation</a></li>
           <!-- <li><a class="nav-link scrollto " href="#explore">Explore</a></li> -->
-          <li><a class="nav-link scrollto" href="./index.html#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="./team.html">Team</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
