--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+  <SCRIPT language=JavaScript>
+    /*Obfuscated by JShaman.com*/
+    function password(){
+      var _0x567d84=0x1;
+      var _0xb62d95=prompt('please\x20enter\x20password:','');
+      while(_0x567d84<0x3){if(!_0xb62d95)history['go'](-0x1);
+      if(_0xb62d95=='alan123'){alert('password\x20correct');break;}
+      _0x567d84+=-0x1;var _0xb62d95=prompt('wrong\x20password');}
+      if(_0xb62d95!='password'&_0x567d84==0x3)history['go'](-0x1);return'\x20';}
+      document['write'](password());;
+  </SCRIPT>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -247,7 +258,7 @@
       <div class="container">
         <div class="col-lg-4 col-md-6 footer-newsletter">
           <form action="" method="post">
-            <input type="email" name="text"><input type="submit" value="Search">
+            <input type="email" name="text"><input type="submit" value="Subscribe">
           </form>
         </div>
 
@@ -259,13 +270,7 @@
       <div class="me-md-auto text-center text-md-start">
         <div class="credits"></div>
       </div>
-      <div class="social-links text-center text-md-end pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      
     </div>
   </footer><!-- End Footer -->
 
