--- a/bubble.html
+++ b/bubble.html
@@ -36,15 +36,15 @@
   <header id="header" class="fixed-top d-flex align-items-center" style ="background-color: #6F8FEA">
     <div class="container d-flex align-items-center">
       <img src="img/logo.png" style="width: 40px;" alt="">
-      <h1 class="logo me-auto" style="margin-left: 10px; margin-top: 0px; "  ><a href="index.html" style="color:#fff" >Eye Opener<span></span></a></h1>
+      <h1 class="logo me-auto" style="margin-left: 10px; margin-top: 0px; "  ><a href="home.html" style="color:#fff" >Eye Opener<span></span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
+      <!-- <a href="home.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="./index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#tabs">About</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#Bubble">Bubble</a></li>
+          <li><a class="nav-link scrollto " href="home.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="home.html#tabs">About</a></li>
+          <li><a class="nav-link scrollto" href="home.html#Bubble">Bubble</a></li>
           <li><a class="nav-link scrollto" href="./news.html">Recommondation</a></li>
           <!-- <li><a class="nav-link scrollto " href="#explore">Explore</a></li> -->
           <li><a class="nav-link scrollto" href="./team.html">Team</a></li>
