--- a/news.html
+++ b/news.html
@@ -42,13 +42,20 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="home.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="home.html#tabs">About</a></li>
+          <li><a class="nav-link scrollto " href="./home.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./home.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="./bubble.html">Bubble</a></li>
           <li><a class="nav-link scrollto" href="./news.html">Recommondation</a></li>
           <!-- <li><a class="nav-link scrollto " href="#explore">Explore</a></li> -->
+          <!-- <li class="dropdown nav-link scrollto"><a><span>Recommondation</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#blog">Top 10 channel</a></li>
+              
+              <li><a href="./Twitter handle.html">Twitter handle</a></li>
+              
+            </ul>
+          </li> -->
           <li><a class="nav-link scrollto" href="./team.html">Team</a></li>
-
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
